# mlflow

./: setup.py
mlflow/server/js/: .eslintrc.js  BUILD.bazel  craco.config.js
mlflow/server/js/.storybook/: main.js
mlflow/server/js/scripts/: sync-webshared.sh
mlflow/server/js/src/: index.js  setupProxy.js
mlflow/server/js/src/__generated__/web-shared-bundle/: hooks.d.ts  hooks.mjs  metrics.d.ts  metrics.mjs  mfe-services.d.ts  mfe-services.mjs  recents.d.ts  recents.mjs
mlflow/server/js/src/common/: constants-databricks.js
mlflow/server/js/src/common/components/: ExperimentRunsTableEmptyOverlay.js  ExperimentRunsTableEmptyOverlay.test.js  MlflowInteractionTracker.js  MlflowInteractionTracker.test.js  PlotlyStylesProvider.js  PlotlyStylesProvider.test.js  RequestStateWrapper.js  RequestStateWrapper.test.js
mlflow/server/js/src/common/sdk/: JobsService.js
mlflow/server/js/src/common/utils/: DatabricksTestUtils.js  DatabricksUtils.js  FetchUtils.js  FetchUtils.test.js  UniverseFrontendApis.js  UniverseFrontendApis.test.js  Utils.js  Utils.test.js
mlflow/server/js/src/data-profiles/: CategoricalFeature.jsx  CategoricalFeature.stories.jsx  DataProfileGrid.jsx  DataProfiles.jsx  DataProfiles.stories.jsx  HistogramUtils.js  HistogramUtils.test.js  NumericEquiWidthHistogram.jsx  NumericEquiWidthHistogram.stories.jsx  NumericalFeature.jsx  NumericalFeature.stories.jsx  ProfileProps.js  ProfileSelector.jsx  ProfileSelector.stories.jsx  TopValues.jsx  TopValues.stories.jsx  TopValuesList.jsx  TopValuesList.stories.jsx  sharedComponents.jsx  utils.js
mlflow/server/js/src/data-profiles/hooks/: index.js  usePreparedData.js
mlflow/server/js/src/data-profiles/sample-data/: airbnb.json  airbnb2.json
mlflow/server/js/src/experiment-tracking/: actions.js  constants.js  routes.js  types.ts
mlflow/server/js/src/experiment-tracking/components/: App.js  ArtifactPage.js  ArtifactView.js  ArtifactView.test.js  CompareRunPage.js  CompareRunView.js  ExperimentPage.js  ExperimentPage.test.js  ExperimentRunsTableMultiColumnView2.js  ExperimentView.js  ExperimentView.test.js  ExperimentViewHelpers.js  ExperimentViewHelpers.test.js  HomePage.js  HomeView.js  LazyPlot.js  MetricPage.js  MetricView.js  MetricsPlotPanel.js  RunPage.js  RunView.css  RunView.js  RunView.test.js
mlflow/server/js/src/experiment-tracking/reducers/: Reducers.js  Reducers.test.js
mlflow/server/js/src/experiment-tracking/sdk/: MlflowMessages.js  MlflowService.js
mlflow/server/js/src/feature-store/: FeatureStoreApp.js  OWNERS  actions.js  constants.js  index.js  reducers.js  reducers.test.js  routes.js  selectors.js  selectors.test.js  services.js  store.js
mlflow/server/js/src/feature-store/components/: FeatureConsumers.js  FeatureConsumers.test.js  FeaturePage.js  FeaturePage.test.js  FeatureStorePage.js  FeatureStorePage.test.js  FeatureStoreView.js  FeatureStoreView.test.js  FeatureTableFeatures.js  FeatureTableFeatures.test.js  FeatureTablePage.js  FeatureTablePage.test.js  FeatureTableProducers.js  FeatureTableProducers.test.js  FeatureTableProfilePane.js  FeatureTableProfilePane.test.js  FeatureTableView.js  FeatureTableView.test.js  FeatureView.js  FeatureView.test.js  OnlineStorePage.js  OnlineStorePage.test.js  OnlineStoreView.js  OnlineStoreView.test.js
mlflow/server/js/src/feature-store/utils/: ComplexDataTypeUtils.js  ComplexDataTypeUtils.test.js  CronUtils.js  CronUtils.test.js  FeatureTableUtils.js  FeatureTableUtils.test.js  IconUtils.js  IconUtils.test.js  LinkUtils.js  LinkUtils.test.js  OnlineStoreUtils.js  PermissionUtils.js  PermissionUtils.test.js  TableUtils.js  test-utils.js
mlflow/server/js/src/i18n/default/: en.json
mlflow/server/js/src/i18n/lang/: OWNERS  de-DE.json  es-ES.json  fr-FR.json  it-IT.json  ja-JP.json  ko-KR.json  pt-BR.json  pt-PT.json
mlflow/server/js/src/mfe/: MLFlowMFERoot.js  register.js  stylisExtraScopePlugin.js
mlflow/server/js/src/model-monitoring/: monitoringStrings.js  testUtils.js  utils.js  utils.test.js
mlflow/server/js/src/model-monitoring/components/: JobHistorySection.jsx  JobHistorySection.test.js  JobScheduleSection.jsx  JobScheduleSection.test.js  JobSection.jsx  MonitoringErrorBoundary.jsx  MonitoringPane.jsx  MonitoringPane.test.js  RecentRuns.jsx
mlflow/server/js/src/model-monitoring/hooks/: useActiveMonitor.js  useJobFetch.js
mlflow/server/js/src/model-registry/: OWNERS  actions.js  constant-overrides.js  constants.js  index.css  reducers.js  reducers.test.js  routes.js  services.js  test-utils.js  utils.js
mlflow/server/js/src/model-registry/components/: CompareModelVersionsPage.js  ConfigureInferenceButton.js  ConfigureInferenceButton.test.js  ConfigureInferenceForm.css  ConfigureInferenceForm.js  ConfigureInferenceForm.test.js  ConfigureInferenceModal.js  ConfigureInferenceModal.test.js  CreateModelForm.js  CreateModelPage.js  CreateModelPage.test.js  DirectTransitionForm.js  ModelActivitiesList.css  ModelActivitiesList.js  ModelActivitiesList.test.js  ModelListPage.js  ModelListPage.test.js  ModelListView.js  ModelListView.test.js  ModelPage.js  ModelPage.test.js  ModelStageTransitionDropdown.js  ModelStageTransitionDropdown.test.js  ModelVersionPage.js  ModelVersionTable.js  ModelVersionTable.test.js  ModelVersionView.js  ModelVersionView.test.js  ModelView.js  ModelView.test.js  PendingRequestsTable.js  PendingRequestsTable.test.js  PendingRequestsTableContainer.js  RegisterModelForm.js  RegisterModelForm.test.js  TransitionRequestForm.css  TransitionRequestForm.js  TransitionRequestForm.test.js
mlflow/server/js/src/model-registry/utils/: PermissionUtils.js  PermissionUtils.test.js  SearchUtils.js  SearchUtils.test.js
mlflow/server/js/src/model-serving/: OWNERS  actions.js  constants.js  reducers.js  reducers.test.js  services.js  test-utils.js  utils.js
mlflow/server/js/src/model-serving/components/: CallModelView.js  CallModelView.test.js  ComputeConfigView.js  ComputeConfigView.test.js  (+39 more)
mlflow/server/js/src/shared/: NotebookFetcher.js  NotebookFetcher.test.js  route-interactions.js  route-interactions.test.js
(+82 files in other folders)
